<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@color/bg_grey"
    tools:context=".MyActivity">

    <!--<TextView
        android:text="@string/hello_world"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    -->
    <Button
        style="@style/btnStandard.orangeBackground"
        android:text="@string/txt_first"
        android:id="@+id/btn_spotify_streamer" />

    <Button
        style="@style/btnStandard.blueBackground"
        android:text="@string/txt_second"
        android:id="@+id/btn_scores_app" />

    <Button
        style="@style/btnStandard.orangeBackground"
        android:text="@string/txt_third"
        android:id="@+id/btn_library_app" />

    <Button
        style="@style/btnStandard.blueBackground"
        android:text="@string/txt_fourth"
        android:id="@+id/btn_build_it_bigger" />

    <Button
        style="@style/btnStandard.orangeBackground"
        android:text="@string/txt_five"
        android:id="@+id/btn_bacon_reader" />

    <Button
        style="@style/btnStandard.moreMargin"
        android:text="@string/txt_capstone"
        android:id="@+id/btn_capstone" />


</LinearLayout>
